syntax = "proto3";
package message;
option go_package = "message";

message Message {
  int64 id = 1; // 消息id
  int64 to_user_id = 2; // 该消息接收者的id
  int64 from_user_id = 3; // 该消息发送者的id
  string content = 4; // 消息内容
  optional string create_time = 5; // 消息创建时间
}
message douyin_message_chat_request {
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
}

message douyin_message_chat_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Message message_list = 3; // 消息列表
}


message douyin_relation_action_request {
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
  int32 action_type = 3; // 1-发送消息
  string content = 4; // 消息内容
}

message douyin_relation_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

service MessageSrv{
  rpc MessageChat(douyin_message_chat_request) returns (douyin_message_chat_response); //发布视频操作
  rpc MessageAction(douyin_relation_action_request) returns (douyin_relation_action_response);// 获取用户已发布视频的列表
}